plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.143'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    maven { name = 'LocalMirror'; url = uri("${projectDir}/.local-repo") }
    maven { name = 'MinecraftForge'; url = uri('https://maven.minecraftforge.net') }
    maven { name = 'NeoForge'; url = uri('https://maven.neoforged.net/releases') }
    mavenCentral()
}

legacyForge {
    enable {
        forgeVersion = project.forge_version
    }
    runs {
        client {
            client()
            if (project.hasProperty('quickPlayWorld')) {
                programArguments.addAll '--quickPlaySingleplayer',
                        project.property('quickPlayWorld').toString()
            }
        }
        server {
            server()
            programArgument '--nogui'
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }
    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
}

configurations {
    localRuntime
    runtimeClasspath.extendsFrom(localRuntime)
}

dependencies {
    compileOnly files(
            "libs/Mekanism-1.20.1-${mekanism_version}.jar",
            "libs/jei-1.20.1-forge-${jei_version}.jar"
    )
    localRuntime files(
            "libs/Mekanism-1.20.1-${mekanism_version}.jar",
            "libs/occultism-1.20.1-${occultism_version}.jar",
            "libs/jei-1.20.1-forge-${jei_version}.jar",
            'libs/modonomicon-1.20.1-forge-1.79.3.jar',
            'libs/curios-forge-5.14.1+1.20.1.jar',
            'libs/geckolib-forge-1.20.1-4.8.4.jar',
            'libs/SmartBrainLib-forge-1.20.1-1.15.jar'
    )
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version           : forge_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
